docs(docs-infra): fix docs pages overflow when specific example-viewer exists (#61384)
enforce content to be fluid until a specific max width, and rollback breakpoints to be applied when 1430px is the current win size
as widths between 1430px and 1431px will be broken

PR Close #61384

--- a/adev/src/app/core/layout/footer/footer.component.scss
+++ b/adev/src/app/core/layout/footer/footer.component.scss
@@ -1,3 +1,5 @@
+@use '@angular/docs/styles/media-queries' as mq;
+
 .adev-footer-columns {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
@@ -18,8 +20,8 @@
   transition: background-color 0.3s ease;
 
   // this accounts for absolutely positioned TOC on the right
-  @media only screen and (min-width: 1430px) {
-    width: calc(100% - 195px - var(--layout-padding) * 3);
+  @include mq.for-large-desktop-up{   
+   width: calc(100% - 195px - var(--layout-padding) * 3);
   }
 
   h2 {
