--- a/adev/src/app/features/update/update.component.scss
+++ b/adev/src/app/features/update/update.component.scss
@@ -11,7 +11,7 @@
     padding-inline: var(--layout-padding);
 
     //applying styles when TOC position got translated to the top right 
-    @media only screen and (min-width: 1431px) {
+    @include mq.for-large-desktop-up {
       // take the available space except a reserved area for TOC
       margin-left: -16rem;
       width: calc(100% - 16rem);
@@ -28,7 +28,7 @@
   max-width: var(--page-width);
 
   &>* {
-    @include mq.for-big-desktop-up {
+    @include mq.for-extra-large-desktop-up {
       padding-inline: 0px;
     }
   }
